# astra-autoaim-rs

./: .gitignore  CLAUDE.md  CLAUDE.zh-CN.md  Cargo.toml  README.md  rebuild.md
config/: app.example.yaml
crates/astra-app/: Cargo.toml
crates/astra-app/src/: main.rs
crates/astra-ballistics/: Cargo.toml
crates/astra-ballistics/src/: lib.rs
crates/astra-camera-gx/: Cargo.toml
crates/astra-camera-gx/src/: error.rs  ffi.rs  gx.rs  lib.rs  mock.rs
crates/astra-config/: Cargo.toml
crates/astra-config/src/: lib.rs
crates/astra-io/: Cargo.toml
crates/astra-io/src/: lib.rs
crates/astra-protocol/: Cargo.toml
crates/astra-protocol/src/: lib.rs
crates/astra-runtime/: Cargo.toml
crates/astra-runtime/src/: lib.rs
crates/astra-tracking/: Cargo.toml
crates/astra-tracking/src/: lib.rs
crates/astra-types/: Cargo.toml
crates/astra-types/src/: lib.rs
crates/astra-vision/: Cargo.toml
crates/astra-vision/src/: error.rs  lib.rs  mock.rs  ort.rs  preprocess.rs
docs/: architecture.md
scripts/: run_real.ps1
target-ort-image-test/: .rustc_info.json
target-ort-image-test/debug/.fingerprint/adler2-f1841005092ce7be/: lib-adler2  lib-adler2.json
target-ort-image-test/debug/.fingerprint/anyhow-11ad8ede9f4b8b45/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-ort-image-test/debug/.fingerprint/anyhow-c8f85c9944df2be7/: build-script-build-script-build  build-script-build-script-build.json
target-ort-image-test/debug/.fingerprint/anyhow-f62637551f337d6f/: lib-anyhow  lib-anyhow.json
target-ort-image-test/debug/.fingerprint/astra-config-da9e145a7f1d6fc7/: lib-astra_config  lib-astra_config.json
target-ort-image-test/debug/.fingerprint/astra-types-4655bf8d11def70d/: lib-astra_types  lib-astra_types.json
target-ort-image-test/debug/.fingerprint/astra-vision-6d7cec1badda5bcc/: dep-test-lib-astra_vision  test-lib-astra_vision  test-lib-astra_vision.json
target-ort-image-test/debug/.fingerprint/autocfg-4a4e01d500b12a33/: lib-autocfg  lib-autocfg.json
target-ort-image-test/debug/.fingerprint/bitflags-01917a316b6c47a9/: lib-bitflags  lib-bitflags.json
target-ort-image-test/debug/.fingerprint/bytemuck-8357b545825fd7b8/: lib-bytemuck  lib-bytemuck.json
target-ort-image-test/debug/.fingerprint/byteorder-lite-d6ad94bfe2ed40f0/: lib-byteorder_lite  lib-byteorder_lite.json
target-ort-image-test/debug/.fingerprint/cfg-if-958b7eb6cae6936d/: lib-cfg_if  lib-cfg_if.json
target-ort-image-test/debug/.fingerprint/crc32fast-17bfa425368b8715/: build-script-build-script-build  build-script-build-script-build.json
target-ort-image-test/debug/.fingerprint/crc32fast-2e4e0a73df8ebdf7/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-ort-image-test/debug/.fingerprint/crc32fast-a5e5d95f5b15d17d/: lib-crc32fast  lib-crc32fast.json
target-ort-image-test/debug/.fingerprint/flate2-9fff859552db5305/: lib-flate2  (+1 more)
(+108 files in other folders)
